--- a/package.json
+++ b/package.json
@@ -10,6 +10,9 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "express": "^4.18.2"
+    "@netlify/functions": "^2.4.0",
+    "@types/express": "^4.17.21",
+    "express": "^4.18.2",
+    "serverless-http": "^3.2.0"
   }
 }
